# Boiler-Plate-Qt

./: .gitattributes  .gitignore  App.pro  CMakeLists.txt  Makefile  README.md  qml.qrc
plugin/RiveQtQuickPlugin/: RiveQtQuickPlugin.qmltypes  RiveQtQuickPlugin_qml_module_dir_map.qrc
runtime/debug/: .rive_premake_args  Makefile  miniaudio.make  rive.make  rive_harfbuzz.make  rive_sheenbidi.make  rive_yoga.make
runtime/release/: .rive_premake_args  miniaudio.make  rive.make  rive_harfbuzz.make  rive_sheenbidi.make  rive_yoga.make
src/C/: AppFiles.cpp  AppFiles.h  AppSettings.cpp  AppSettings.h  SettingsKeys.h  main.cpp
src/JS/: helpers.js
src/Py/: PySimulation.py
src/QML/: main.qml
src/QML/Components/: DashboardHeader.qml  RoundedButton.qml
src/QML/Pages/: C++.qml  Python.qml
src/QML/Settings/: Styles.qml
